文言気になったので修正

--- a/_posts/2018-04-09-2.md
+++ b/_posts/2018-04-09-2.md
@@ -22,5 +22,5 @@ title: 2. Uncontrollable
 - コルーチンにくわしい[八木さん](https://twitter.com/sys1yagi)
 - エラー出たときの表示について
 
-つづきは 4/16(月) 配信予定、ゲストは[らこらこ](https://twitter.com/laco2net)さんです！  
+次回は 4/16(月) 配信予定、ゲストは[らこらこ](https://twitter.com/laco2net)さんです！  
 [編集裏話](https://komatatsu.hateblo.jp/entry/inaka-fm-ep2)
