次回配信の日程を修正

--- a/_posts/2018-04-23-4.md
+++ b/_posts/2018-04-23-4.md
@@ -20,4 +20,4 @@ title: 4. Lost power
 - クロスフェード転職
 
 
-次回は 4/22(日) 配信予定、ゲストは引き続き[らこらこ](https://twitter.com/laco2net)さんです！  
+次回は 5/6(日) 配信予定、ゲストはまだ秘密！お楽しみに！！！
