リモート飲み会飲み会のリンクを追加

--- a/_posts/2018-06-03-9.md
+++ b/_posts/2018-06-03-9.md
@@ -22,6 +22,6 @@ title: 9. Train commuting is dead
 - [Shibuya.apk](https://www.youtube.com/channel/UCujNJ2A08gzoEcMHoi_Ul2g)
 - 僕たちが求めているもの
 - リモート飲み会
-- [リモート飲み会飲み会]()
+- [リモート飲み会飲み会](https://atnd.org/events/97496)
 
 次回は 6/11(月) 配信予定、ゲストはあの有名VTuberさん！
